--- a/Reg/templates/Reg/login.html
+++ b/Reg/templates/Reg/login.html
@@ -7,9 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+
+     {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <title>Sign in!</title>
-	
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
@@ -37,28 +39,28 @@
   </nav>
 
 
-    
+
 
         <div class = 'container jumbotron' id = "form">
         <form>
             <div class="form-group">
                 <label for="InputUsername">نام کاربری</label>
                 <input type="username" class="form-control" id="username">
-                
+
             </div>
             <div class="form-group">
                 <label for="InputPassword">رمز عبور</label>
                 <input type="password" class="form-control" id="password">
             </div>
-            
+
             <button type="submit" id="submit" class="btn btn-primary">ورود</button>
             <p></p>
             <a class="" href="#" >ثبت نام</a>
             <label>  حساب کاربری ندارید؟</label>
-            
+
         </form>
     </div>
 
-    <script src="login js.js"></script>
+    <script src="{% static "login_js.js"%}"></script>
   </body>
 </html>
