--- a/Reg/templates/Reg/signup.html
+++ b/Reg/templates/Reg/signup.html
@@ -9,11 +9,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-     <link rel="stylesheet" href="{% static "/style.css " %}">
-
-      <link rel="stylesheet" href="style.css">
+     <!-- <link rel="stylesheet" href="{% static "/style.css"%}"> -->
+     {% load static %}
+     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+      <!-- <link rel="stylesheet" href="/style.css"> -->
     <title>Sign up!</title>
-	
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
@@ -41,19 +42,19 @@
   </nav>
 
 
-    
+
 
         <div class = 'container jumbotron' id = "form" >
         <form>
             <div class="form-group">
                 <label for="InputUsername">نام کاربری</label>
                 <input type="username" class="form-control" id="username" required>
-                
+
             </div>
             <div class="form-group">
                 <label for="InputEmail">ایمیل</label>
                 <input type="email" class="form-control" id="email" required>
-                
+
             </div>
             <div class="form-group">
                 <label for="InputPassword">رمز عبور</label>
@@ -74,12 +75,12 @@
             </div>
             <br>
             <button type="submit" id="submit" class="btn btn-primary">ثبت نام</button>
-            
-            
+
+
         </form>
     </div>
-     <script src="{% static "signup js" %}"></script>
+     <script src="{% static "signup_js.js"%}"></script>
 
-    <!--<script src="signup js.js"></script>-->
+    <!--<script src="signup_js.js"></script>-->
   </body>
 </html>
