--- a/Reg/templates/signup.html
+++ b/Reg/templates/signup.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -58,9 +57,14 @@
             </div>
             <div class="form-group">
                 <label for="InputPassword">رمز عبور</label>
-                <input type="password" class="form-control" id="password" required>
+                <input type="password" class="form-control" id="password1" required>
             </div>
 
+            <div class="form-group">
+                <label for="InputPassword">تکرار رمز عبور</label>
+                <input type="password" class="form-control" id="password2" required>
+            </div>
+            <!--
             <div class="form-check">
               <input class="form-check-input" type="radio" name="exampleRadios" id="normal" value="option1" checked>
               <label class="form-check-label" for="exampleRadios1">
@@ -73,6 +77,7 @@
                 کاربر ویژه
               </label>
             </div>
+            -->
             <br>
             <button type="submit" id="submit" class="btn btn-primary">ثبت نام</button>
 
@@ -82,5 +87,6 @@
      <script src="{% static "signup_js.js"%}"></script>
 
     <!--<script src="signup_js.js"></script>-->
+
   </body>
 </html>
