--- a/Reg/templates/signup.html
+++ b/Reg/templates/signup.html
@@ -44,7 +44,8 @@
 
 
         <div class = 'container jumbotron' id = "form" >
-        <form>
+        <form method="post">
+			{% csrf_token %}
             <div class="form-group">
                 <label for="InputUsername">نام کاربری</label>
                 <input type="username" class="form-control" id="username" required>
@@ -84,9 +85,7 @@
 
         </form>
     </div>
-     <script src="{% static "signup_js.js"%}"></script>
 
-    <!--<script src="signup_js.js"></script>-->
 
   </body>
 </html>
